--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="global.css">
 </head>
 <body>
-  <h1>Shehbaz Majeed - Portfolio Projects</h1>
-
+  <div class="template-covers">
+    
+  </div>
+  <div class="template-body"></div>
 </body>
 </html>
