Updated Main index HTML.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <link rel="stylesheet" href="global.css">
 </head>
 <body>
-  <div class="template-covers">
-    
-  </div>
-  <div class="template-body"></div>
+  <a href="./projects/01-anopiss/" class="link link-01">Anopiss</a>
 </body>
 </html>
